// Vitest Snapshot v1

exports[`StegvisningFrame > rendrer slik den skal med className 1`] = `
<DocumentFragment>
  <section
    class="_section_c336de className"
  >
    <p>
      lorem ipsum
    </p>
  </section>
</DocumentFragment>
`;

exports[`StegvisningFrame > rendrer slik den skal uten className 1`] = `
<DocumentFragment>
  <section
    class="_section_c336de "
  >
    <p>
      lorem ipsum
    </p>
  </section>
</DocumentFragment>
`;
